Bug 439423 - Resources remain assigned to deleted tags.
Summary: Resources remain assigned to deleted tags.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2021-07-02 23:02 UTC by Alan North
Modified: 2021-08-06 14:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan North 2021-07-02 23:02:05 UTC
I would maybe understand if this was the case when not restarting since one can undelete a tag. But after restarting it's just weird. I would expect deleting a tag removes it from all resources that are assigned to it.

STEPS TO REPRODUCE
1. Create new tag, `Test`. Assign a resource to it.
2. Go to tag, delete it.
3. Restart krita (not needed, just making the point it also happens on restart).
4. Create the tag `Test` again. 

OBSERVED RESULT
Resource that were assigned to the deleted tag are still assigned to it when that tag is recreated. I say recreated, but imagine this happening weeks apart, to the user they are just creating a new tag.

EXPECTED RESULT
I would personally expect deleting a tag removes it from all resources that are assigned to it even before a restart. Only undeleting a tag would retag them.

SOFTWARE/OS VERSIONS
Windows 10
Krita: b4a6f8041a
Comment 1 Tiar 2021-08-06 14:20:59 UTC
Git commit 3f18671be4d2d773161776808cee776ade400254 by Agata Cacko.
Committed on 06/08/2021 at 14:03.
Pushed by tymond into branch 'master'.

Ask user on adding a tag with the same url in TagChooser

Before this commit, if the user tried to create a new tag
with the same url as an existing tag,
it would undelete the deleted tag, which means the assigned
resources would still be assigned.
This commit instead asks the user what they want to achieve,
and there are three options:
* Replace (overwrite) - this will reset assigned resources
* Undelete - this will cancel adding the tag and just
undelete the existing, deleted tag with all the assigned
resources it had before
* Cancel - no operation

This will be for both the tag tool button popup and
for the right-click in the resource chooser
(KisResourceItemContextMenu) because it uses the same
code.

CCMAIL:kde-i18n-doc@kde.org

M  +39   -2    libs/resourcewidgets/KisTagChooserWidget.cpp
M  +8    -0    libs/resourcewidgets/KisTagChooserWidget.h

https://invent.kde.org/graphics/krita/commit/3f18671be4d2d773161776808cee776ade400254