libs/resourcewidgets/KisTagChooserWidget.cpp
@@ -17,6 +17,7 @@
 #include <QToolButton>
 #include <QGridLayout>
 #include <QComboBox>
+#include <QMessageBox>
 
 #include <klocalizedstring.h>
 #include <KisSqueezedComboBox.h>
@@ -26,6 +27,7 @@
 #include "KisResourceItemChooserContextMenu.h"
 #include "KisTagToolButton.h"
 #include "kis_debug.h"
+#include <KisTagResourceModel.h>
 
 class Q_DECL_HIDDEN KisTagChooserWidget::Private
 {
@@ -184,15 +186,50 @@ void KisTagChooserWidget::addTag(const QString &tag)
     addTag(tag, 0);
 }
 
+KisTagChooserWidget::OverwriteDialogOptions KisTagChooserWidget::overwriteTagDialog(KisTagChooserWidget* parent, bool tagIsActive)
+{
+    QString undeleteOption = !tagIsActive ? i18nc("Option in a dialog to undelete (reactivate) existing tag with its old assigned resources", "Restore previous tag")
+                                      : i18nc("Option in a dialog to use existing tag with its old assigned resources", "Use existing tag");
+    // if you use this simple cast, the order of buttons must match order of options in the enum
+    return (KisTagChooserWidget::OverwriteDialogOptions)QMessageBox::question(parent, i18nc("Dialog title", "Overwrite tag?"), i18nc("Question to the user in a dialog about creating a tag",
+                                                                                      "A tag with this unique name already exists. Do you want to replace it?"),
+                                       i18nc("Option in a dialog to discard the previously existing tag and creating a new one in its place", "Replace (overwrite) tag"),
+                                       undeleteOption, i18n("Cancel"));
+}
+
 void KisTagChooserWidget::addTag(const QString &tagName, KoResourceSP resource)
 {
-    d->model->addTag(tagName, false, {resource});
+    KisTagSP tagForUrl = d->model->tagForUrl(tagName);
+    if (!tagForUrl.isNull()) {
+        int response = overwriteTagDialog(this, tagForUrl->active());
+        if (response == Undelete) { // Undelete
+            d->model->setTagActive(tagForUrl);
+            KisTagResourceModel(d->resourceType).tagResource(tagForUrl, resource->resourceId());
+            d->model->sort(KisAllTagsModel::Name);
+            return;
+        } else if (response == Cancel) { // Cancel
+            return;
+        }
+    }
+    d->model->addTag(tagName, true, {resource}); // this will overwrite the tag
     d->model->sort(KisAllTagsModel::Name);
 }
 
 void KisTagChooserWidget::addTag(KisTagSP tag, KoResourceSP resource)
 {
-    d->model->addTag(tag, false, {resource});
+    KisTagSP tagForUrl = d->model->tagForUrl(tag->url());
+    if (!tagForUrl.isNull()) {
+        int response = overwriteTagDialog(this, tagForUrl->active());
+        if (response == Undelete) { // Undelete
+            d->model->setTagActive(tagForUrl);
+            KisTagResourceModel(d->resourceType).tagResource(tagForUrl, resource->resourceId());
+            d->model->sort(KisAllTagsModel::Name);
+            return;
+        } else if (response == Cancel) { // Cancel
+            return;
+        }
+    }
+    d->model->addTag(tag, true, {resource}); // this will overwrite the tag
     d->model->sort(KisAllTagsModel::Name);
 }
 
